# RalphLoops

./: .gitignore  README.md
ClaudeRalphLoop/: PORTING_NOTES.md  README.md  analyze_pending.py  check_stuck.py  pyproject.toml  run_loop.py
ClaudeRalphLoop/.kiro/specs/persona-review-verdict-parsing/: .config.kiro
ClaudeRalphLoop/.kiro/specs/resilient-invocation-and-context-truncation/: design.md  tasks.md
ClaudeRalphLoop/.mastercontrol/: status.md
ClaudeRalphLoop/ralph_loop/: __init__.py  claude_code.py  cli.py  context.py  dependency_analyzer.py  json_extract.py  logger.py  models.py  orchestrator.py  planner.py  prompt_template.py  snapshot_diff.py  task_creation.py  task_selector.py  tokens.py  validator.py
ClaudeRalphLoop/schemas/: task-spec.schema.json  task.schema.json
ClaudeRalphLoop/scripts/: export_schemas.py
ClaudeRalphLoop/tests/: conftest.py  test_budget_tracker_properties.py  test_claude_code_invoker.py  test_cli.py  test_cli_invocation_error_handler.py  test_cli_properties.py  test_config_loader_properties.py  test_context_composer.py  test_context_composer_properties.py  test_git_manager.py  test_git_manager_properties.py  test_integration.py  test_logger.py  test_orchestrator.py  test_orchestrator_properties.py  test_persona_registry_properties.py  test_planner.py  test_prompt_template_properties.py  test_token_accountant_properties.py  test_validator.py
ClaudeRalphLoop/tests/support/: fake_claude.py
kiro-ralph-loop/: README.md  pyproject.toml  reset_expert_reviews.py
kiro-ralph-loop/.kiro/specs/persona-review-verdict-parsing/: bugfix.md  design.md
kiro-ralph-loop/.kiro/specs/ralph-loop/: .config.kiro  requirements.md  tasks.md
kiro-ralph-loop/.kiro/specs/resilient-invocation-and-context-truncation/: .config.kiro  requirements.md
kiro-ralph-loop/ralph_loop/: __init__.py  atomic_io.py  budget.py  cli.py  context.py  git_manager.py  kiro.py  models.py  pending_queue.py  persona_registry.py  prompt_template.py  snapshot_diff.py  status_update.py  task_spec.py  tokens.py  validator.py
kiro-ralph-loop/schemas/: config.schema.json  tasks.schema.json
kiro-ralph-loop/templates/book/personas/: editor.yaml  outline.yaml
kiro-ralph-loop/tests/: test_atomic_io.py  test_book_template_personas.py  test_cli.py  test_cli_invocation_error_handler.py  test_cli_properties.py  test_config_loader.py  test_escalation.py  test_json_extract.py  test_pending_queue.py  test_persona_registry.py  test_planner_properties.py  test_resumer_properties.py  test_schemas.py  test_snapshot_diff.py  test_snapshot_diff_properties.py  test_status_update_properties.py  test_task_creation.py  test_task_creation_properties.py  test_task_selector.py  test_task_spec_parser.py  test_task_spec_parser_properties.py  test_termination_properties.py  test_token_accountant.py  test_validator.py
kiro-ralph-loop/tests/support/: __init__.py
ralph_loop/: cli.py  config.py  context.py  escalation.py  json_extract.py  logger.py  models.py  orchestrator.py  planner.py  resumer.py  task_creation.py  validator.py
schemas/: persona.schema.json
templates/: README.md
tests/: __init__.py  strategies.py  test_budget_tracker.py  test_cli.py  test_config_loader_properties.py  test_context_composer.py  test_context_composer_properties.py  test_dependency_analyzer.py  test_logger.py  (+15 more)
(+7 files in other folders)
