[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-ralph-loop"
version = "0.1.0"
description = "Domain-agnostic automated iteration wrapper for Claude Code CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Ralph Loop Contributors" },
]
keywords = ["claude", "claude-code", "agent", "loop", "automation", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2",
    "click>=8.1",
    "pyyaml>=6.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "mypy>=1.10",
]

[project.scripts]
ralph = "ralph_loop.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ralph_loop"]

[tool.hatch.build.targets.sdist]
include = [
    "ralph_loop",
    "tests",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    # asyncio subprocess transports leave their event-loop's internal
    # self-pipe (AF_UNIX socketpair) open until GC collects the loop.
    # This is a known Python / pytest-asyncio interaction on 3.11; the
    # actual application under test is correct — only the test-runner
    # cleanup timing is imperfect.  Suppress rather than fail on it.
    "ignore:.*unclosed.*socket.*:ResourceWarning",
    "ignore:.*unclosed event loop.*:ResourceWarning",
]
