[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ralph-loop"
version = "0.1.0"
description = "Domain-agnostic automated iteration wrapper for Kiro CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Ralph Loop Contributors" },
]
keywords = ["kiro", "agent", "loop", "automation", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2",
    "click>=8.1",
    "pyyaml>=6.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "mypy>=1.10",
]

[project.scripts]
ralph = "ralph_loop.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ralph_loop"]

[tool.hatch.build.targets.sdist]
include = [
    "ralph_loop",
    "tests",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
